# SlashGPT

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SlashGPT.py  embed.py  foo.json  foo.py  foo.yml  graph  jupyter_runtime.py  my_jupyter.py  olympic.py  prebuild.py  pyproject.toml  requirements.txt  server.py  toyaml.py
.github/workflows/: check_code.yaml  docs.yml
config/: llm_config.py
dbtools/: dbpinecone.py  insert_db.py
dbtools/chroma/: insert_and_query.py  olympics.py  test.py
dbtools/postgresql/: insert_db.py
docs/: Architecture.ipynb  benchmark.md  manifest.md
filememory/cal/: 1b839a7b-a167-4a02-9381-4c307a630bef.json
foo/: server.py
lib/: SlashGPT.py  chat_config.py  chat_config_base.py  chat_history.py  chat_session.py  chat_slash_config.py  cli.py  common.py  function_action.py  function_call.py  jupyter_runtime.py  log.py  manifest.py
lib/dbs/: pinecone.py
lib/function/: network.py  (+3 more)
manifests/: README.md  browser.json  cal.json  cook.json  dispatcher.json  dot.json  drone2.json  home2.json  jupyter.json  jupyter2.json  jupyterp.json  kayak.json  manifests.json  names.json  news2.json  noteable.json  spacex.json  weather.json  web3.json  webpilot.json  worldnews.json
notebooks/: SlashGPT_on_GoogleColab.ipynb  evmarket.ipynb  magnificent7.ipynb  shibuya_coffee.ipynb  shinjuku_restrooms.ipynb  spacex.ipynb
obsolete/: career.json  movie.json  python.json  story.json
postgres/: insert_db.py  postgres.md
prompts/: baby.json  brand.json  browser.json  business.json  cal.json  calendar.json  calendar2.json  chef.json  comedian.json  cook.json  crush.json  currency.json  dispatcher.json  doraemon.json  drone.json  drone2.json  drone3.json  english.json  goku.json  historian.json  home.json  home2.json  hotel.json  kame.json  kanryo.json  kayak.json  linux.json  lou-oshiba.json  mag2.json  ml.json  movie.json  obachan.json  obachan2.json  olympic.json  omochikaeri.json  patent.json  poet.json  products.json  python.json  relationship.json  (+10 more)
requirements/: full.txt
resources/: aiagents.json  aiticker.yml  browser.py  cal.py  calendar.ical  calendar.ics  calendar.json  calendar.py  cook.json  currency.json  currency.yml  db.py  definitive.json  dispatcher.json  dot.json  drone.yml  drone3.json  dronpilot.yml  github.graphql  home.json  home.yml  jupyter.json  jupyter.py  kayak.yaml  noteable.json  omochikaeri.txt  openapi.yaml  receipes.json  recipes.json  weather.json  web3.py  webpilot.json  wolfram.json  wolfram.yaml  worldnews.json  worldnews.yaml
roles2/: dentist.json  patent.json  tools.json  yogi.json
rpg1/: bartender.json  bartendere.json
sample/: sample.py
samples/: AgentGPT.py  CodeReview.py  SimpleGPT.py  SimpleGPT2.py  SimpleGPTFileStorage.py  config_sample.py
templates/: index.html
test/: README.md  default.json  memory.json  nsql.json  zoo.json
tne/: sample.py
zoo/: saru.json
(+329 files in other folders)
