[tool.black]
line-length = 150

[tool.isort]
line_length = 150

[tool.poetry]
name = "slashgpt"
version = "0.0.8"
description = ""
authors = ["snakajima <satoshi.nakajima@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/snakajima/SlashGPT"

packages = [
 { include = "slashgpt", from  = "src" },
]

include = ["manifests/*", "manifests/*/*", "test/*", "resources/*/*",  "data/*", "src/slashgpt/manifests/*", "src/slashgpt/manifests/*/*", "src/slashgpt/resources/*/*"]


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
openai = "^1.2.0"
python-dotenv = "1.0.0"
termcolor = "^2.3.0"
bs4 = "^0.0.1"
tiktoken = "^0.4.0"
requests-toolbelt = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dependencies.pyobjc]
version = "^9.2"
markers = "sys_platform == 'darwin'"

[tool.poetry.group.optional.dependencies]
pinecone-client = "^2.2.2"
google-generativeai = "^0.1.0"
gtts = "^2.3.2"
ipython = "^8.15.0"
matplotlib = "^3.7.2"
numpy = "^1.25.0"
replicate = "^0.11.0"
gql = "^3.4.1"
yfinance = "^0.2.28"
scipy= "^1.11.1"
codeboxapi="^0.0.9"
pydantic = "1.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
yamllint = "^1.32.0"
black = {extras = ["jupyter"], version = "^23.9.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slashGPT = "slashgpt.cli:cli"
slashbot = "slashgpt.slashbot:run_bot"

[tool.poetry.build]
script = "prebuild.py"